--- a/css/styles.css
+++ b/css/styles.css
@@ -1,14 +1,16 @@
 .body {
   color: #ffff
 }
+
 .jumbotron {
   border-radius: 0;
   text-align: center;
-  background-image: url("../img/backgrounds/landing.jpg");
+  background-image: url('/img/backgrounds/landing.jpg');
   background-position: center;
   background-repeat: no-repeat;
   background-size: 100% auto;
 }
+
 #Breakfast {
   background-image: url("/img/foodtop/breakfast.jpg");
   height: 170px;
@@ -16,24 +18,36 @@
   background-size: 100% auto;
   text-align: center;
 }
-
+#Breakfast:hover{
+  opacity: 0.3;
+  background-color: white;
+  color: black;
+}
 #Lunch {
   background-image: url("/img/foodtop/lunch.jpg");
   text-align: center;
 }
 
+#Lunch:hover {
+  opacity: 0.3;
+  background-color: white;
+  color: black;
+}
+
 #dinner {
   background-image: url("/img/foodtop/dinner.jpg");
   text-align: center;
-  font-size: 30px
-  height:auto;
+  font-size: 30px;
+  background-size: 100% auto;
 }
-
+#dinner:hover{
+  opacity: 0.3;
+  background-color: white;
+}
 #HappyHour {
   text-align: center;
-  background-size:  100% auto;
-  height: 30px;
-  width:50px;
+  background-size: 100% auto;
+  font-size: 15px
 }
 
 #partytime {
@@ -41,35 +55,29 @@
   text-align: center;
   background-size: 100%auto;
 }
-#menu {
-  font-size: 28px;
-  height: 200px;
-}
-.btn-outline-warning:hover{
-  color: #212529;
-  border-color: coral;
-  background-color: coral;
-}
-.btn-outline-warning {
-  color:Markazi
-  border-color: coral;
-#jumbotron-menu-nav {
-  background-image: url('../img/backgrounds/foodsBg.jpg');
+
+.jumbotron-center {
+  background-image: url("img/backgrounds/foodsBg.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: 100% auto;
-  font-size: 18#jumbotron-menu-nav {
-  background-image: url('../img/backgrounds/foodsBg.jpg');
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: 100% auto;
-  font-size: 22px;px;
 }
-#reviews {
-  box-shadow: 10px 10px 10px 10px grey;
-  border-radius: 0.3rem;
+
+#Email {
+  background-color: red;
+  align-self: center;
 }
-col{
-  background-image: url("/img/fastFood1.jpg");
+
+#subscribe {
+  background-color: white;
+  text-align: center;
+  background-image: url("..img/backgrounds/subscribe.jpg");
 }
-.col{
+
+#footer {
+  background-color: #F15A29;
+  margin-top: -50px;
+  padding: 50px;
+  text-align: center;
+  background-image: url("img/backgrounds/foodsBg.jpg");
+}
