change image source

--- a/css/styles.css
+++ b/css/styles.css
@@ -5,14 +5,14 @@
 .jumbotron {
   border-radius: 0;
   text-align: center;
-  background-image: url("../img/backgrounds/landing.jpg");
+  background-image: url("img/backgrounds/landing.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: 100% auto;
 }
 
 #Breakfast {
-  background-image: url("../img/foodtop/breakfast.jpg");
+  background-image: url("img/foodtop/breakfast.jpg");
   height: 170px;
   width: 90Px;
   background-size: 100% auto;
@@ -26,7 +26,7 @@
 }
 
 #Lunch {
-  background-image: url("../img/foodtop/lunch.jpg");
+  background-image: url("img/foodtop/lunch.jpg");
   text-align: center;
 }
 
@@ -37,7 +37,7 @@
 }
 
 #dinner {
-  background-image: url("../img/foodtop/dinner.jpg");
+  background-image: url("img/foodtop/dinner.jpg");
   text-align: center;
   font-size: 30px;
   background-size: 100% auto;
@@ -61,7 +61,7 @@
 }
 
 .jumbotron-center {
-  background-image: url("../img/backgrounds/foodsBg.jpg");
+  background-image: url("img/backgrounds/foodsBg.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: 100% auto;
@@ -75,7 +75,7 @@
 #subscribe {
   background-color: white;
   text-align: center;
-  background-image: url("../img/backgrounds/subscribe.jpg");
+  background-image: url("img/backgrounds/subscribe.jpg");
 }
 
 #footer {
